Closed
Bug 624648
Opened 14 years ago
Closed 14 years ago
IAccessible::get_accChild broken for child indices
Categories
(Core :: Disability Access APIs, defect)
Core
Disability Access APIs
Tracking
()
VERIFIED
FIXED
mozilla2.0b10
| Tracking | Status | |
|---|---|---|
| blocking2.0 | --- | final+ |
People
(Reporter: surkov, Assigned: surkov)
References
Details
(Keywords: access, regression, Whiteboard: [hardblocker])
Attachments
(1 file)
|
793 bytes,
patch
|
davidb
:
review+
|
Details | Diff | Splinter Review |
regression from bug 592913, see http://groups.google.com/group/mozilla.dev.accessibility/browse_thread/thread/71633638f75fba8a# for discussion
| Assignee | ||
Comment 2•14 years ago
|
||
Assignee: nobody → surkov.alexander
Status: NEW → ASSIGNED
Attachment #502746 -
Flags: review?(bolterbugz)
Comment 3•14 years ago
|
||
Comment on attachment 502746 [details] [diff] [review]
patch
>+ // Gecko child indices are 0-based in contrast to indices used in MSAA.
Might as well be explicit:
// Gecko child indices are 0-based and MSAA child indices are 1-based.
Attachment #502746 -
Flags: review?(bolterbugz) → review+
Comment 4•14 years ago
|
||
Thanks for jumping on this one Alexander. Approving blocking since this is major.
blocking2.0: ? → final+
Updated•14 years ago
|
Whiteboard: [hardblocker]
| Assignee | ||
Comment 5•14 years ago
|
||
landed on 2.0 - http://hg.mozilla.org/mozilla-central/rev/a659f574f159
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b10
| Assignee | ||
Comment 6•14 years ago
|
||
(In reply to comment #3)
> Comment on attachment 502746 [details] [diff] [review]
> patch
>
> >+ // Gecko child indices are 0-based in contrast to indices used in MSAA.
>
> Might as well be explicit:
> // Gecko child indices are 0-based and MSAA child indices are 1-based.
Forgot to change the comment, hope that's ok.
You need to log in
before you can comment on or make changes to this bug.
Description
•