Bug 624648 - IAccessible::get_accChild broken for child indices, r=davidb, a=blocking2.0final+