accessible/src/msaa/nsAccessibleWrap.cpp
@@ -1737,7 +1737,8 @@ nsAccessibleWrap::GetXPAccessibleFor(const VARIANT& aVarChild)
   if (nsAccUtils::MustPrune(this))
     return nsnull;
 
-  return GetChildAt(aVarChild.lVal);
+  // Gecko child indices are 0-based in contrast to indices used in MSAA.
+  return GetChildAt(aVarChild.lVal - 1);
 }
 
 void nsAccessibleWrap::UpdateSystemCaret()
